fix stuff that was broken on mobile

--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ body {
   max-width: 64em;
   margin: 0 auto 5em;
   font-family: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif;
+  padding: 0 0.5rem;
 
 /*  font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT', 'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;*/
 }
@@ -268,7 +269,6 @@ a.button:active {
   gap: 0.5rem;
   margin-bottom: 1rem;
   text-align: center;
-  padding: 0 0.5rem;
 }
 .top3 > label {
   display: block;
@@ -314,7 +314,7 @@ a.button:active {
   font-family: monospace;
   width: 36rem;
   max-width: 100%;
-  max-width: calc(100% - 1rem);
+  max-width: calc(100vw - 1rem);
   color: #ccc;
   margin: 1rem auto 0;
   border: 0.5px solid #222;
@@ -335,7 +335,7 @@ a.button:active {
   justify-content: center;
 }
 .api-info {
-  padding: 0.5rem;
+  padding: 0.5rem 0;
   flex-shrink: 1;
   flex-basis: 36rem;
 }
@@ -440,8 +440,9 @@ a.button:active {
 .source-container .action {
   padding: 0.25rem 0rem;
   background: #222;
-  /*background: hsla(0, 0%, 0%, 0.333);*/
-  border-top: 1px solid #333
+  border-top: 1px solid #333;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 .source-container button {
   font: inherit;
